<resources>
    <string name="app_name">ReeBot</string>
    <string name="title_activity_init">init</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_join">회원가입</string>
    <string name="title_booking">프로그램 예약 목록</string>
    <string name="title_setting_catv">TV 서비스 공급자 변경</string>

    <string name="title_activity_channel">ChannelActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="email">Email address</string>
    <string name="password">Passwoad</string>

    <string name="join">회원가입</string>
    <string name="findpw">비밀번호 찾기</string>
    <string name="email_login">Email 로그인</string>
    <string name="sns_login">SNS 간편 로그인</string>


    <string name="cb_terms">이용약관 동의</string>
    <string name="label_email">이메일 주소</string>
    <string name="hint_email">이메일 주소 입력</string>
    <string name="label_pwd">비밀번호</string>
    <string name="hint_pwd">비밀번호 입력</string>
    <string name="label_pwd_check">비밀번호 확인</string>
    <string name="hint_pwd_check">비밀번호 재입력</string>

    <string name="label_cabletv_brand">TV 서비스 공급자 설정</string>
    <string name="label_tv_brand">TV 제조사 설정</string>

    <string name="error_input_email_pwd">EMAIL , PASSWD를 입력해주세요.</string>
    <string name="error_input_wrong_email">EMAIL을 정확히 입력해주세요.</string>
    <string name="error_input_wrong_pwd">PASSWORD을 정확히 입력해주세요.</string>
    <string name="error_encrypt_pwd">PASSWORD 오류. 다시 시도해주세요.</string>


    <string name="label_ssid">SSID (WIFI 이름)</string>
    <string name="hint_ssid_pw">WIFI 비밀번호)</string>




    <!-- Strings related to login -->

    <string name="device">장치설정</string>






    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>

    <string name="accessibility_description">접근성 권한을 필요로 합니다.</string>

    <string name="kakao_key">b70138bc6be29095827f1bc61729b4d7</string>
</resources>
