<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.reebotui.DeviceActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:background="#ffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/device"
            android:textColor="#202020"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="368dp"
            android:layout_height="367dp"
            android:paddingBottom="25dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_ssid"
                android:textColor="#202020"
                android:layout_marginTop="10dp"
                android:textSize="11sp"
                 />

            <Spinner
                android:id="@+id/sp_ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_pwd"
                android:textColor="#202020"
                android:textSize="11sp"
                android:layout_marginTop="10dp"
                android:id="@+id/textView3"
                />
            <EditText
                android:id="@+id/et_ssid_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input"
                android:ems="10"
                android:hint="@string/hint_ssid_pw"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="#202020"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="확인"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
